--- a/client/src/App.css
+++ b/client/src/App.css
@@ -269,6 +269,8 @@ p {
   margin: 10px;
   border-radius: 10px ;
   width:fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 .mymsg{
@@ -277,6 +279,10 @@ p {
 
 .messages > .text-container >p{
   font-size: 1.2rem;
+}
+.msg-img{
+  margin-bottom: 20px;
+  max-width: 100%;
 }
 
 
